Install in hpp.hrp2 python module instead of hpp.hppcorbaserver
	* idl/Makefile.am,
	* idl/hpp/corbaserver/Makefile.am -> idl/hpp/hrp2/Makefile.am,
	* idl/hpp/corbaserver/hrp2.idl -> idl/hpp/hrp2/hrp2.idl,
	* src/Makefile.am.

--- a/idl/Makefile.am
+++ b/idl/Makefile.am
@@ -1,9 +1,9 @@
 include $(top_srcdir)/build-aux/init.mk
 
-SUBDIRS = hpp/corbaserver
+SUBDIRS = hpp/hrp2
 
 # Distribute idl files.
 idldir = $(datadir)/idl
 
 nobase_dist_idl_DATA=				\
-	hpp/corbaserver/hrp2.idl
+	hpp/hrp2/hrp2.idl
