--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -2,15 +2,8 @@ include $(top_srcdir)/build-aux/init.mk
 
 # -- Distribute and install headers
 nobase_include_HEADERS =				\
-	hpp/corbaserver.hh				\
-	hpp/corbaserver/config.hh			\
-	hpp/corbaserver/doc.hh				\
-	hpp/corbaserver/fwd.hh				\
-	hpp/corbaserver/server.hh
-
-if OPENHRP
-
-nobase_include_HEADERS +=				\
-	hpp/corbaserver/openhrp.hh
-
-endif
+	hpp/hrp2.hh				\
+	hpp/hrp2/config.hh			\
+	hpp/hrp2/doc.hh				\
+	hpp/hrp2/fwd.hh				\
+	hpp/hrp2/server.hh
