--- a/include/hpp/hrp2/config.hh.in
+++ b/include/hpp/hrp2/config.hh.in
@@ -1,6 +1,6 @@
 // Copyright (C) 2008, 2009 by Thomas Moulard, CNRS.
 //
-// This file is part of the hpp-util.
+// This file is part of hpp-template-corba
 //
 // This software is provided "as is" without warranty of any kind,
 // either expressed or implied, including but not limited to the
