--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,9 +1,8 @@
 include $(top_srcdir)/build-aux/init.mk
 
 # -- Distribute and install headers
-nobase_include_HEADERS =				\
-	hpp/hrp2.hh				\
-	hpp/hrp2/config.hh			\
-	hpp/hrp2/doc.hh				\
-	hpp/hrp2/fwd.hh				\
-	hpp/hrp2/server.hh
+nobase_include_HEADERS =			\
+	hpp/corba/config.hh			\
+	hpp/corba/doc.hh			\
+	hpp/corba/server.hh			\
+	hpp/corba/server.hxx
