Dependency to hpp-util is optional
	* configure.ac,
	* include/Makefile.am,
	* include/hpp/corba/server.hxx: --enable-hpp-util configuration option
	  triggers a dependency to hpp-util for better log and debug handling.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -6,3 +6,8 @@ nobase_include_HEADERS =			\
 	hpp/corba/doc.hh			\
 	hpp/corba/server.hh			\
 	hpp/corba/server.hxx
+
+debugdir = 					\
+	${includedir}/hpp/corba
+debug_DATA = 					\
+	${builddir}/hpp/corba/debug.hh
