--- a/configure.ac
+++ b/configure.ac
@@ -104,7 +104,7 @@ AC_SUBST([PKGCONFIG_DESCRIPTION], ['Template CORBA server'])
 AC_SUBST([PKGCONFIG_URL], [])
 AC_SUBST([PKGCONFIG_REQUIRES], [`echo "$PKGCONFIG_REQUIRES" | sed 's/, $//'`])
 AC_SUBST([PKGCONFIG_CONFLICTS], [])
-AC_SUBST([PKGCONFIG_LIBS], [-lhpp-hrp2])
+AC_SUBST([PKGCONFIG_LIBS], [])
 AC_SUBST([PKGCONFIG_CFLAGS], [])
 
 
