Add one level of directories in include
	* configure.ac,
	* include/Makefile.am,
	* include/hpp/corba/template/debug.hh.in: new,
	* include/hpp/corba/doc.hh -> include/hpp/corba/template/doc.hh,
	* include/hpp/corba/server.hh -> include/hpp/corba/template/server.hh,
	* include/hpp/corba/server.hxx -> include/hpp/corba/template/server.hxx.

--- a/configure.ac
+++ b/configure.ac
@@ -119,7 +119,7 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
   Makefile
   include/Makefile
-  include/hpp/corba/debug.hh
+  include/hpp/corba/template/debug.hh
   doc/Makefile
 ])
 
