--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "build-aux"]
 	path = build-aux
 	url = roboptim:build-aux.git
+[submodule "cmake"]
+	path = cmake
+	url = ssh://git@github.com/jrl-umi3218/jrl-cmakemodules
