--- a/doc/Doxyfile.extra.in
+++ b/doc/Doxyfile.extra.in
@@ -1,11 +1,5 @@
-FILE_PATTERNS          = *.cc *.hh *.hxx \
-		       	 *.c *.h   	 \
-                         *.ice
+INPUT                  = @CMAKE_SOURCE_DIR@/include
+IMAGE_PATH             = @CMAKE_SOURCE_DIR@/doc/pictures \
+                         @CMAKE_SOURCE_DIR@/doc/figures
 
-INPUT                  = @abs_top_srcdir@/include \
-                         @abs_top_srcdir@/src	  \
-                         @abs_top_srcdir@/doc
-
-HTML_HEADER            = @abs_top_srcdir@/doc/header.html
-HTML_FOOTER            = @abs_top_srcdir@/doc/footer.html
-IMAGE_PATH             = @abs_top_srcdir@/doc/pictures
+FILE_PATTERNS          = *.cc *.cpp *.h *.hh *.hxx
