--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cmake"]
 	path = cmake
-	url = ssh://git@github.com/jrl-umi3218/jrl-cmakemodules
+	url = git://github.com/jrl-umi3218/jrl-cmakemodules
