--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,10 @@ PROJECT(${PROJECT_NAME} ${PROJECT_ARGS})
 
 # Trigger dependency to jrl-mal
 ADD_REQUIRED_DEPENDENCY("omniORB4")
-ADD_REQUIRED_DEPENDENCY("hpp-util >= 0.4")
+OPTION(HPP_CORBA_ENABLE_HPP_UTIL OFF "Use hpp-util to log messages.")
+IF(HPP_CORBA_ENABLE_HPP_UTIL)
+  ADD_REQUIRED_DEPENDENCY("hpp-util >= 0.4")
+ENDIF(HPP_CORBA_ENABLE_HPP_UTIL)
 
 SET(${PROJECT_NAME}_HEADERS
   include/${CUSTOM_HEADER_DIR}/doc.hh
