--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,11 @@ INCLUDE(cmake/hpp.cmake)
 
 SET(CUSTOM_HEADER_DIR "hpp/corba/template")
 
-# Defines paths.
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
-
 COMPUTE_PROJECT_ARGS(PROJECT_ARGS LANGUAGES CXX)
 PROJECT(${PROJECT_NAME} ${PROJECT_ARGS})
+
+# Defines paths.
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 # Trigger dependency to jrl-mal
 ADD_REQUIRED_DEPENDENCY("omniORB4")
@@ -40,6 +40,12 @@ SET(${PROJECT_NAME}_HEADERS
   include/${CUSTOM_HEADER_DIR}/server.hh
   include/${CUSTOM_HEADER_DIR}/server.hxx
 )
+
+ADD_LIBRARY(${PROJECT_NAME} SHARED src/server.cc)
+PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} omniORB4)
+INSTALL(TARGETS ${PROJECT_NAME}
+  DESTINATION ${CMAKE_INSTALL_LIBDIR})
+PKG_CONFIG_APPEND_LIBS(${PROJECT_NAME})
 
 ADD_SUBDIRECTORY(doc)
 ADD_SUBDIRECTORY(include)
