[CMake install package.xml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,5 @@ PKG_CONFIG_APPEND_LIBS(${PROJECT_NAME})
 ADD_SUBDIRECTORY(doc)
 ADD_SUBDIRECTORY(include)
 ADD_SUBDIRECTORY(tests)
+
+INSTALL(FILES package.xml DESTINATION share/${PROJECT_NAME})
