--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,1 +1,1 @@
-include: http://rainboard.laas.fr/project/hpp-template-corba/.gitlab-ci.yml
+include: https://rainboard.laas.fr/project/hpp-template-corba/.gitlab-ci.yml
